# bakdroid

./: .gitignore  README.md  pyproject.toml
bakdroid/: __init__.py  cli.py  crypto.py  header.py  unpacker.py
